crates/strider/tests/snapshots/v3__ppc32be__memory__array_sum.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "3" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v4" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "36" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "7" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "39" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "42" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "45" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "47" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "50" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "52" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "50" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "53" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "55" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "61" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "67" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "70" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "74" -> "70" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "70" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "65" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
